<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sky is clear" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDividerAlertDialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

    <LinearLayout
        android:id="@+id/forecast.temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/night_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/night_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                tools:text="Night" />

            <TextView
                android:id="@+id/night_temp_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="451" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/morning_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/morning_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                tools:text="Morning" />

            <TextView
                android:id="@+id/morning_temp_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="451" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/day_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                tools:text="Day" />

            <TextView
                android:id="@+id/day_temp_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="451" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/evening_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/evening_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                tools:text="Evening" />

            <TextView
                android:id="@+id/evening_temp_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="451" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_wind"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecast.temperature"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/wind_icon_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_wind_light_32dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/wind_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="16sp"
            tools:text="Wind: 3 m/s NW" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_rain"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_wind"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/rain_icon_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_rain_light_32dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/rain_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="16sp"
            tools:text="Rain 3mm" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cloud"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_rain"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/cloud_icon_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_cloud_light_32dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/cloud_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="16sp"
            tools:text="Cloud: 100 %" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_humidity"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_cloud"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/humidity_icon_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:cropToPadding="false"
            android:src="@drawable/ic_humidity_light_32dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/humidity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="16sp"
            tools:text="Humidity: 99%" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pressure"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_humidity"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/pressure_icon_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_barometer_light_32dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/pressure_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="Pressure: 1970 hPa" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
